# floyzcpp

./: .gitignore  CMakeLists.txt  README.md  install_linux.sh  install_macos.sh  main.cpp  run_clang.sh  run_gcc.sh
docs/: documentation.md  instrucition.ipynb  structure.ipynb  structure_projects.md
scripts/: cmake.sh  run_clang.sh  run_gcc.sh
src/: CMakeLists.txt  cli_logic.cpp  cli_logic.hpp  floyzcpp  generating_logic.hpp  global_structure.hpp  main.cpp
test/: floyzcpp  test.md
test/default/include/: helloWorld.hpp
test/default/src/: main.cpp
